--- a/ide/packages/ideconfig/languages/ideconfstrconsts.es.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.es.po
@@ -15,7 +15,9 @@ msgid "Error: invalid compiler: %s"
 msgstr "Error: compilador no válido: %s"
 
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+#, fuzzy
+#| msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Sugerencia: puede establecer la ruta del compilador en Herramientas -> Opciones-> Archivos -> Ruta del compilador"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
