--- a/ide/packages/ideconfig/languages/ideconfstrconsts.fi.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.fi.po
@@ -15,7 +15,9 @@ msgid "Error: invalid compiler: %s"
 msgstr "Virhe: toimimaton kääntäjä: %s"
 
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+#, fuzzy
+#| msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Vihje: voit asettaa kääntäjän hakupolun valikosta Työkalut -> Asetukset -> Tiedostot -> Kääntäjän polku"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
