--- a/ide/packages/ideconfig/languages/ideconfstrconsts.id.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.id.po
@@ -17,7 +17,7 @@ msgstr "Salah: kompilator tidak benar: %s"
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
 #, fuzzy
 #| msgid "Hint: you can set the compiler path in Environment->Environment options->Files->Compiler Path"
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Petunjuk: anda bisa menset path kompilator dalam Lingkungan->Opsi Lingkungan->File->Path Kompilator"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
