--- a/ide/packages/ideconfig/languages/ideconfstrconsts.ca.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.ca.po
@@ -17,7 +17,7 @@ msgstr "S'ha produït un error: el compilador %s no és vàlid."
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
 #, fuzzy
 #| msgid "Hint: you can set the compiler path in Environment->Environment options->Files->Compiler Path"
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Suggeriment: podeu triar la trajectòria del compilador en Entorn->Opcions d'entorn->Fitxers->Trajectòria del compilador"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
