--- a/ide/packages/ideconfig/languages/ideconfstrconsts.de.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.de.po
@@ -15,7 +15,9 @@ msgid "Error: invalid compiler: %s"
 msgstr "Fehler: Ungültiger Compiler: %s"
 
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+#, fuzzy
+#| msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Anmerkung: Sie können den Compilerpfad setzen unter Werkzeuge -> Einstellungen -> Umgebung -> Dateien -> Compilerpfad"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
