--- a/ide/packages/ideconfig/languages/ideconfstrconsts.it.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.it.po
@@ -15,7 +15,9 @@ msgid "Error: invalid compiler: %s"
 msgstr "Errore: compilatore non valido: %s"
 
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+#, fuzzy
+#| msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Consiglio: imposta il percorso del compilatore in Strumenti-> Opzioni-> Files-> Percorso compilatore"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
