--- a/ide/packages/ideconfig/languages/ideconfstrconsts.ja.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.ja.po
@@ -15,7 +15,9 @@ msgid "Error: invalid compiler: %s"
 msgstr "エラー：無効なコンパイラ: %s"
 
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+#, fuzzy
+#| msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "ヒント: コンパイラパスの設定は、ツール→オプション→ファイル→コンパイラパスでできます。"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
