--- a/ide/packages/ideconfig/languages/ideconfstrconsts.nl.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.nl.po
@@ -17,7 +17,7 @@ msgstr "Error: ongeldige compiler: %s"
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
 #, fuzzy
 #| msgid "Hint: you can set the compiler path in Environment->Environment options->Files->Compiler Path"
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "Hint: u kunt het pad naar de compiler opgeven in Omgeving -> Omgevingsopties -> Bestanden -> Compiler Pad"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
