--- a/ide/packages/ideconfig/languages/ideconfstrconsts.tr.po
+++ b/ide/packages/ideconfig/languages/ideconfstrconsts.tr.po
@@ -15,7 +15,9 @@ msgid "Error: invalid compiler: %s"
 msgstr "Hata: geçersiz derleyici: %s"
 
 #: ideconfstrconsts.liscompilerhintyoucansetthecompilerpath
-msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+#, fuzzy
+#| msgid "Hint: you can set the compiler path in Tools -> Options-> Files -> Compiler Path"
+msgid "Hint: you can set the compiler executable in Tools -> Options-> Files -> Compiler executable"
 msgstr "İpucu: Araçlar -> Seçenekler -> Dosyalar -> Derleyici Yolu'nda derleyici yolunu ayarlayabilirsiniz"
 
 #: ideconfstrconsts.liscomponentnameisapascalkeyword
